--- a/src/main/java/com/mycompany/biostartlocal/compliteprofile.form
+++ b/src/main/java/com/mycompany/biostartlocal/compliteprofile.form
@@ -90,7 +90,7 @@
               <Color blue="0" green="0" red="0" type="rgb"/>
             </Property>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Times New Roman" size="12" style="1"/>
+              <Font name="Times New Roman" size="14" style="1"/>
             </Property>
           </Properties>
         </Component>
@@ -488,6 +488,7 @@
                 <Property name="text" type="java.lang.String" value="+ FINGERPRINT"/>
               </Properties>
               <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
               </Events>
             </Component>
